--- a/apps/client/docker/nginx.conf
+++ b/apps/client/docker/nginx.conf
@@ -10,4 +10,8 @@ server {
         try_files $uri $uri/ /index.html;
         index  index.html index.htm;
     }
+
+    location  ^~ /api {
+        proxy_pass   http://nest-app:8344/;
+    }
 }
