--- a/docker/client/nginx.conf
+++ b/docker/client/nginx.conf
@@ -10,4 +10,10 @@ server {
         try_files $uri $uri/ /index.html;
         index  index.html index.htm;
     }
+
+    location  ~ /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
+        proxy_pass   http://nest-app:8344;
+    }
 }
+
