--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:api": "pnpm -F ./apps/api start:dev",
     "dev:client": "pnpm -F ./apps/client dev",
-    "build:client": "pnpm -F ./apps/client build",
+    "build:client": "pnpm -F ./apps/client build:docker",
     "install:api": "pnpm -F ./apps/api install",
     "install:client": "pnpm -F ./apps/client install",
     "postinstall": "pnpm install:api && pnpm install:client"
