feat: change style

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,9 +1,9 @@
-# DATABASE_URL=mysql://root:root@localhost:3306/cash_demo
-DATABASE_URL=mysql://root:root@mysql-container:3306/cash_demo
+DATABASE_URL=mysql://root:root@localhost:3306/cash_demo
+# DATABASE_URL=mysql://root:root@mysql-container:3306/cash_demo
 
 server_port = 8344
 
 redis_server_port = 6379
-# redis_server_host = localhost
-redis_server_host = redis-container
+redis_server_host = localhost
+# redis_server_host = redis-container
 redis_server_db = 1
